[package]
name = "fs_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9.0"
clap = { version = "4.4.8", features = ["derive"] }
glob = "0.3.1"
memmap2 = "0.9.0"
object = { version = "0.32.1", features = ["all"] }
postcard = { version = "1.0.8", features = ["alloc", "use-std"] }
serde = { version = "1.0.193", features = ["derive"] }
